feat(templates): model complete cycles and contextual editing